--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/Sparse808/Portfolio#readme",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.18",
+    "tailwindcss": "^4.1.18"
   }
 }
